--- a/src/app/_component/stt-setting/cu-stt/cu-stt.component.html
+++ b/src/app/_component/stt-setting/cu-stt/cu-stt.component.html
@@ -127,7 +127,8 @@
                                 <label for="status">Status</label>
                                 <select id="status" class="form-control input-sm"
                                     formControlName="status"
-                                    [ngClass]="{ 'is-invalid': submitted && f.status.errors }">
+                                    [ngClass]="{ 'is-invalid': submitted && f.status.errors }"
+                                    [attr.disabled]="f.status.value === 2 ? true : null">
                                     <option hidden value="" disabled selected>
                                         {{statusList.parentLookupData.description}}
                                     </option>
@@ -293,10 +294,15 @@
             </div>
         </div>
         <div class="col-lg-12" style="margin-top: 15px;margin-bottom: 5px;">
-            <button  type="reset" class="btn btn-sm btn-default">CLEAR</button>
-            <button  type="submit" [disabled]="loading" class="btn btn-sm btn-danger"
-                style="float:right" >{{breadcrumb | uppercase}}</button>
+            <button type="reset" 
+                [attr.disabled]="f?.status?.value === 2 ? true : null"
+                class="btn btn-sm btn-default">CLEAR</button>
+            <button type="submit" [disabled]="loading"
+                [attr.disabled]="f?.status?.value === 2 ? true : null"
+                class="btn btn-sm btn-danger"
+                style="float:right">
+                {{breadcrumb | uppercase}}
+            </button>
         </div>
     </form>
 </div>
-
