--- a/src/app/_component/batch-action/batch-action.component.html
+++ b/src/app/_component/batch-action/batch-action.component.html
@@ -71,26 +71,11 @@
                             application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                             style="display: none;"
                             #inputUpload (change)="uploadBulkData($event.target.files[0])" hidden>
-                        <button type="button" class="btn btn-sm btn-default"
-                            (click)="inputUpload.click()">
+                        <button type="button" class="btn btn-sm btn-default" (click)="inputUpload.click()">
                             <span class="glyphicon glyphicon-upload"></span> Upload
                         </button>
-                        &nbsp;
-                        <button type="button" class="btn btn-sm btn-default"
-                            (click)="downloadData()"
-                            style="background: #cb0f43;color: white;">
-                            <span class="glyphicon glyphicon-download"></span> Downalod
-                        </button>
-                        &nbsp;
-                        <button type="button" class="btn btn-sm btn-default"
-                            (click)="downloadTemplate()"
-                            style="background: #337ab7;color: white;">
-                            <span class="glyphicon glyphicon-download"></span> Template
-                        </button>
                     </div>
-                    <div class="col-lg-12">
-                        <hr style="margin-top: 10px;">
-                    </div>
+                    <div class="col-lg-12"><hr style="margin-top: 10px;"></div>
                 </div>
                 <table class="table table-bordered table-sm
                     table-responsive table-striped" style="font-size: 10px;">
