--- a/src/app/_component/stt-setting/cu-sttc/cu-sttc.component.html
+++ b/src/app/_component/stt-setting/cu-sttc/cu-sttc.component.html
@@ -66,16 +66,16 @@
 <div class="row gutters-sm">
     <div class="col-lg-12">
         <div id="basic" class="borderd-content">
-            <div class="title" style="color: #cb0f43;">{{title}} Basic</div>
+            <div class="title" style="color: #cb0f43;">{{title}} Control</div>
             <div class="content" style="margin-top: 10px;">
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="form-group">
-                            <label for="serviceName">Service Name</label>
-                            <input type="text" id="serviceName"
+                            <label for="controlName">Control Name</label>
+                            <input type="text" id="controlName"
                                 maxlength="40"
                                 class="form-control input-sm"
-                                placeholder="Enter service name" />
+                                placeholder="Enter control name" />
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -89,112 +89,49 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="form-group">
-                            <label for="taskType">TaskType</label>
-                            <select class="form-control input-sm" id="taskType">
-                                <option value="">Select TaskType</option>
-                                <option *ngFor="let taskType of taskTypeOption"
-                                    [value]="taskType.value">
-                                    {{taskType.key}}
-                                </option>
-                            </select>
+                            <label for="sttcOrder">Section Order</label>
+                            <input type="number" id="sttcOrder" min="0" max="10"
+                                formControlName="sttcOrder"
+                                class="form-control input-sm"
+                                placeholder="Enter control order" />
+                        </div>
+                    </div>
+                    <!-- filedType will pull -->
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label for="filedTitle">Filed Title</label>
+                            <input type="text" id="filedTitle" 
+                                maxlength="40"
+                                class="form-control input-sm"
+                                placeholder="Enter filed title" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label for="filedName">Filed Name</label>
+                            <input type="text" id="filedName" 
+                                maxlength="40"
+                                class="form-control input-sm"
+                                placeholder="Enter filed name" />
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label for="placeHolder">PlaceHolder</label>
+                            <input type="text" id="placeHolder" 
+                                maxlength="40"
+                                class="form-control input-sm"
+                                placeholder="Enter placeholder" />
                         </div>
                     </div>
                 </div>    
             </div>
         </div>
-        <!-- aws -->
-        <div id="aws" class="borderd-content" style="margin-top: 20px;">
-            <div class="title" style="color: #cb0f43;">{{title}} AWS</div>
-            <div class="content" style="margin-top: 10px;">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="form-group">
-                            <label for="apiUrl">ApiUrl</label>
-                            <input type="text" id="apiUrl" 
-                                maxlength="255"
-                                class="form-control input-sm"
-                                placeholder="Enter api url"/>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="httpMethod">Http Method</label>
-                            <select class="form-control input-sm" id="httpMethod">
-                                <option value="">Select HttpMethod</option>
-                                <option *ngFor="let http of httpMethod"
-                                    [value]="http.value">
-                                    {{http.key}}
-                                </option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="apiSecurityIdMlu">Security Mlu</label>
-                            <select class="form-control input-sm" id="apiSecurityIdMlu">
-                                <option value="">Select HttpMethod</option>
-                                <option *ngFor="let http of httpMethod"
-                                    [value]="http.value">
-                                    {{http.key}}
-                                </option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="apiSecurityIdSlu">Security Slu</label>
-                            <select class="form-control input-sm" id="apiSecurityIdSlu">
-                                <option value="">Select HttpMethod</option>
-                                <option *ngFor="let http of httpMethod"
-                                    [value]="http.value">
-                                    {{http.key}}
-                                </option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- kafka -->
-        <div class="borderd-content" style="margin-top: 20px;">
-            <div class="title" style="color: #cb0f43;">{{title}} Kafka</div>
-            <div class="content" style="margin-top: 10px;">
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="numPartitions">Partitions</label>
-                            <input type="number" id="numPartitions" 
-                                min="1" max="5"
-                                class="form-control input-sm"
-                                placeholder="Enter partitions"/>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="topicName">Topic Name</label>
-                            <input type="text" id="topicName" 
-                                maxlength="40"
-                                class="form-control input-sm"
-                                placeholder="Enter topic name" />
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label for="topicPattern">Topic Pattern</label>
-                            <input type="text" id="topicPattern" 
-                                maxlength="40"
-                                class="form-control input-sm"
-                                placeholder="Enter topic pattern"
-                                disabled/>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <div class="col-lg-12" style="margin-top: 15px;margin-bottom: 5px;">
         <button class="btn btn-sm btn-default" (click)="back()">Clear</button>
-        <button  type="submit" [disabled]="loading" class="btn btn-sm btn-danger" style="float:right" >Register</button>
+        <button type="submit" [disabled]="loading" 
+            class="btn btn-sm btn-danger" style="float:right" >Register</button>
     </div>
 </div>
 
