--- a/src/app/_component/stt-setting/cu-sttf/cu-sttf.component.html
+++ b/src/app/_component/stt-setting/cu-sttf/cu-sttf.component.html
@@ -77,8 +77,10 @@
                         <div class="col-lg-4">
                             <div class="form-group">
                                 <label for="sttfName">Form Name</label>
-                                <input type="text" id="sttfName" maxlength="40" formControlName="sttfName"
-                                    class="form-control input-sm" placeholder="Enter form name"
+                                <input type="text" id="sttfName" maxlength="40"
+                                    formControlName="sttfName"
+                                    class="form-control input-sm"
+                                    placeholder="Enter form name"
                                     oninput="this.value = this.value.toUpperCase()"
                                     [ngClass]="{ 'is-invalid': submitted && f.sttfName.errors }" />
                                 <div *ngIf="submitted && f.sttfName.errors" class="invalid-feedback">
@@ -105,6 +107,7 @@
                             <div class="form-group" *ngIf="statusList">
                                 <label for="status">Status</label>
                                 <select id="status" class="form-control input-sm" formControlName="status"
+                                    [attr.disabled]="f.status.value === 2 ? true : null"
                                     [ngClass]="{ 'is-invalid': submitted && f.status.errors }">
                                     <option hidden value="" disabled selected>
                                         {{statusList.parentLookupData.description}}
@@ -144,9 +147,15 @@
             </div>
         </div>
         <div class="col-lg-12" style="margin-top: 15px;margin-bottom: 5px;">
-            <button  type="reset" class="btn btn-sm btn-default">CLEAR</button>
-            <button  type="submit" [disabled]="loading" class="btn btn-sm btn-danger"
-                style="float:right" >{{breadcrumb | uppercase}}</button>
+            <button type="reset"
+                [attr.disabled]="f?.status?.value === 2 ? true : null"
+                class="btn btn-sm btn-default">CLEAR</button>
+            <button type="submit" [disabled]="loading"
+                [attr.disabled]="f?.status?.value === 2 ? true : null"                
+                class="btn btn-sm btn-danger"
+                style="float:right">
+                {{breadcrumb | uppercase}}
+            </button>
         </div>
     </form>
 </div>
