--- a/src/app/_component/stt-setting/sttc-list/sttc-list.component.html
+++ b/src/app/_component/stt-setting/sttc-list/sttc-list.component.html
@@ -1,25 +1,46 @@
-<style>
-    .table-wrapper
-    {
-        width: auto;
-        height: auto;
-        overflow: auto;
-    }
-</style>
-
-<div class="form-group">
-    <label for="searchSourceJobDetails" *ngIf="lookupDatas">
-        Total Lookup ({{lookupDatas.length}})
-    </label>
-    <input type="text" id="searchLookup" 
-        class="form-control input-sm"
-        style="width: 35%;"
-        [(ngModel)]="searchLookup"
-        placeholder="Search by any key" />
+<div class="row">
+    <div class="col-lg-6">
+        <label *ngIf="sttControls">
+            Total STTC ({{sttControls.length}})
+        </label>
+        <input type="text" id="searchValue"
+            class="form-control input-sm" 
+            style="width: 60%;"
+            [(ngModel)]="searchValue"
+            placeholder="Search by any key" />
+    </div>
+    <div class="col-lg-6" style="text-align: end;margin-top: 25px;">
+        <!-- working -->
+        <button *ngIf="refreshButton && refreshButton.active" type="button"
+            class="form-control input-sm"
+            style="width: auto;display: inline;margin-right: 7px;"
+            (click)="refreshAction()">
+            <span id="loading" class="glyphicon glyphicon-refresh"></span>
+            {{refreshButton.title}}
+        </button>
+        <!-- working -->
+        <button *ngIf="addButton && addButton.active" type="button"
+            class="form-control input-sm"
+            style="width: auto; background: #cb0f43;color: white;
+            display: inline;margin-right: 7px;" 
+            (click)="addAction()">
+            <span class="glyphicon glyphicon-plus-sign"></span>
+            {{addButton.title}}
+        </button>
+        <div *ngIf="dropdownButton && dropdownButton.active" class="dropdown" style="display: inline;">
+            <button class="btn btn-primary dropdown-toggle"
+                style="padding: 4px 5px;border-radius: 3px;background: #4750b6;"                
+                type="button" data-toggle="dropdown">{{dropdownButton.title}}
+                <span class="caret"></span></button>
+            <ul class="dropdown-menu" style="left: -38px;">
+                <li *ngFor="let menu of dropdownButton.menus">
+                    <a href="#">{{menu.title}}</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
-<div class="table-wrapper">
-    <table id="source-task-type" class="table table-responsive table
-    table-striped table-bordered table-sm" style="font-size: 12px;">
+<table id="sttc" style="font-size: 12px;margin-top: 10px;"
+    class="table table-responsive table table-striped table-bordered table-sm">
     <thead>
         <tr>
             <th>-</th>
@@ -42,10 +63,10 @@
             <td style="text-align: center;">
                 <div class="Yf">
                     <div [ngClass]="{
-                        'Yg_delete': sttControl.status === 'Delete', 
-                        'Yg_inactive' : sttControl.status === 'Inactive',
-                        'Yg_active' : sttControl.status === 'Active'
-                    }"></div>
+                    'Yg_delete': sttControl.status === 'Delete', 
+                    'Yg_inactive' : sttControl.status === 'Inactive',
+                    'Yg_active' : sttControl.status === 'Active'
+                }"></div>
                 </div>
             </td>
             <td>
@@ -79,15 +100,16 @@
                 {{sttControl.totalSection}}
             </td>
             <!-- <td style="text-align: center;">
-                <span class="badge" [ngClass]="{
-                    'badge-danger': sttControl.status === 'Delete', 
-                    'badge-info' : sttControl.status === 'Inactive',
-                    'badge-success' : sttControl.status === 'Active'
-                }">{{sttControl.status}}</span>
-            </td> -->
+            <span class="badge" [ngClass]="{
+                'badge-danger': sttControl.status === 'Delete', 
+                'badge-info' : sttControl.status === 'Inactive',
+                'badge-success' : sttControl.status === 'Active'
+            }">{{sttControl.status}}</span>
+        </td> -->
             <td style="text-align: center;">
                 <div class="btn-group btn-group-xs" role="group" style="text-align: center">
-                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#sourceTaskTaype">
+                    <button type="button" class="btn btn-default" data-toggle="modal"
+                        data-target="#sourceTaskTaype">
                         <span class="glyphicon glyphicon-edit" style="color:blue"></span>
                     </button>
                     <!-- download source tasktype -->
@@ -100,11 +122,10 @@
                         <span class="glyphicon glyphicon-trash" style="color: #dc3545;"></span>
                     </button>
                     <!-- <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-cog" style="color: black;"></span>
-                    </button> -->
+                    <span class="glyphicon glyphicon-cog" style="color: black;"></span>
+                </button> -->
                 </div>
             </td>
         </tr>
     </tbody>
 </table>
-</div>
