--- a/src/app/_component/stt-setting/stts-list/stts-list.component.html
+++ b/src/app/_component/stt-setting/stts-list/stts-list.component.html
@@ -1,18 +1,7 @@
-<div class="form-group">
-    <label for="searchSourceJobDetails" *ngIf="lookupDatas">
-        Total Section ({{lookupDatas.length}})
-    </label>
-    <input type="text" id="searchLookup" 
-        class="form-control input-sm"
-        style="width: 35%;"
-        [(ngModel)]="searchLookup"
-        placeholder="Search by any key" />
-</div>
-
 <div class="row">
     <div class="col-lg-6">
-        <label for="searchSourceJobDetails" *ngIf="sourceTaskTypes">
-            Total STT ({{sourceTaskTypes.length}})
+        <label *ngIf="sttSections">
+            Total STTS ({{sttSections.length}})
         </label>
         <input type="text" id="searchLookup"
             class="form-control input-sm" 
@@ -22,7 +11,8 @@
     </div>
     <div class="col-lg-6" style="text-align: end;margin-top: 25px;">
         <!-- working -->
-        <button *ngIf="refreshButton && refreshButton.active" type="button"
+        <button *ngIf="refreshButton && refreshButton.active"
+            type="button"
             class="form-control input-sm"
             style="width: auto;display: inline;margin-right: 7px;"
             (click)="refreshAction()">
@@ -30,7 +20,8 @@
             {{refreshButton.title}}
         </button>
         <!-- working -->
-        <button *ngIf="addButton && addButton.active" type="button"
+        <button *ngIf="addButton && addButton.active"
+            type="button"
             class="form-control input-sm"
             style="width: auto; background: #cb0f43;color: white;
             display: inline;margin-right: 7px;" 
@@ -38,11 +29,13 @@
             <span class="glyphicon glyphicon-plus-sign"></span>
             {{addButton.title}}
         </button>
-        <div *ngIf="dropdownButton && dropdownButton.active" class="dropdown" style="display: inline;">
+        <div *ngIf="dropdownButton && dropdownButton.active"
+            class="dropdown" style="display: inline;">
             <button class="btn btn-primary dropdown-toggle"
                 style="padding: 4px 5px;border-radius: 3px;background: #4750b6;"                
-                type="button" data-toggle="dropdown">{{dropdownButton.title}}
-                <span class="caret"></span></button>
+                type="button" data-toggle="dropdown">
+                {{dropdownButton.title}}<span class="caret"></span>
+            </button>
             <ul class="dropdown-menu" style="left: -38px;">
                 <li *ngFor="let menu of dropdownButton.menus">
                     <a href="#">{{menu.title}}</a></li>
@@ -50,19 +43,18 @@
         </div>
     </div>
 </div>
-
-
-<table id="source-task-type" class="table table-responsive table
-    table-striped table-bordered table-sm" style="font-size: 12px;">
+<table id="stts" style="font-size: 12px;margin-top: 10px;"
+    class="table table-responsive table table-striped table-bordered table-sm">
     <thead>
         <tr>
             <th style="width: 4%;">-</th>
             <th style="width: 4%;"># No</th>
             <th>Order</th>
             <th>Section Name</th>
+            <th>Defult</th>
             <th>Created Date</th>
-            <th>Total Form</th>
             <th>Total STT</th>
+            <th>Total Form</th>
             <th>Total Control</th>
             <th style="width: 12%;">Action</th>
         </tr>
@@ -72,53 +64,75 @@
             <td style="text-align: center;">
                 <div class="Yf">
                     <div [ngClass]="{
-                        'Yg_inactive' : sourceTaskType.status.lookupValue === 0,
-                        'Yg_active' : sourceTaskType.status.lookupValue === 1,
-                        'Yg_delete': sourceTaskType.status.lookupValue === 2
+                        'Yg_inactive' : sttSection.status.lookupValue === 0,
+                        'Yg_active' : sttSection.status.lookupValue === 1,
+                        'Yg_delete': sttSection.status.lookupValue === 2
                     }"></div>
                 </div>
             </td>
-            <td>
-                {{sttSection.sectionId}}
+            <td>{{sttSection.sttSId}}</td>
+            <td style="text-align: center;">
+                {{sttSection.sttSOrder}}
+            </td>
+            <td>{{sttSection.sttSName}}</td>
+            <td style="text-align: center;">
+                {{sttSection.default ? 'Yes' : 'No'}}
             </td>
             <td style="text-align: center;">
-                {{sttSection.sectionOrder}}
-            </td>
-            <td>
-                {{sttSection.sectionName}}
+                {{sttSection.dateCreated | date:'dd-MM-yyyy'}}
             </td>
             <td style="text-align: center;">
-                {{sttSection.dateCreated}}
+                {{sttSection.totalSTT}}
             </td>
             <td style="text-align: center;">
                 {{sttSection.totalForm}}
             </td>
             <td style="text-align: center;">
-                {{sttSection.totalStt}}
-            </td>
-            <td style="text-align: center;">
                 {{sttSection.totalControl}}
             </td>
             <td style="text-align: center;">
-                <div class="btn-group btn-group-xs" role="group" style="text-align: center">
-                    <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-edit" style="color:blue"></span>
+                <div class="btn-group btn-group-xs" 
+                    role="group" style="text-align: center">
+                    <button type="button" class="btn btn-default"
+                        (click)="editAction(sttSection)">
+                        <span class="glyphicon glyphicon-edit"
+                        style="color:blue"></span>
                     </button>
-                    <!-- download source tasktype -->
-                    <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-download" style="color:#17a2b8">
-                    </span>
+                    <button type="button" class="btn btn-default"
+                        (click)="editAction(sttSection)">
+                        <span class="glyphicon glyphicon-tree-deciduous"
+                        style="color:#c4478b"></span>
                     </button>
                     <!-- add the method for delete the queue detail -->
-                    <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-trash" style="color: #dc3545;"></span>
+                    <button type="button" class="btn btn-default"
+                        data-toggle="modal" data-target="#deleteAction"
+                        [disabled]="sttSection.status.lookupValue === 2"
+                        (click)="deleteAction(sttSection)">
+                        <span class="glyphicon glyphicon-trash"
+                        style="color: #dc3545;"></span>
                     </button>
-                    <button type="button" class="btn btn-default">
-                        <span class="glyphicon glyphicon-cog" style="color: black;"></span>
+                    <!--  -->
+                    <button type="button"
+                        class="btn btn-default dropdown-toggle" 
+                        data-toggle="dropdown"
+                        [disabled]="sttSection.status.lookupValue === 2">
+                        <span class="glyphicon glyphicon-cog" 
+                        style="color: black;"></span>
                     </button>
+                    <ul class="dropdown-menu" style="left: -90px;">
+                        <li *ngFor="let menu of actionMenu">
+                            <a href="#">{{menu.title}}</a></li>
+                    </ul>
                 </div>
             </td>
         </tr>
     </tbody>
-
 </table>
+<div class="modal fade" id="deleteAction"
+    role="dialog" style="top: 85px;">
+    <del-box
+        [title]="title"
+        [subTitle]="subTitle"
+        (deleteEvent)="deleteActionTriger()">
+    </del-box>
+</div>
