--- a/src/app/_component/source-task/source-task.component.html
+++ b/src/app/_component/source-task/source-task.component.html
@@ -56,7 +56,7 @@
                 <td style="text-align: center;">
                     <a routerLink="" style="pointer-events: none">{{sourceTask.totalLinksJobs}}</a>
                 </td>
-                <td>
+                <td style="text-align: center;">
                     <span class="badge" 
                         [ngClass]="{
                             'badge-danger': sourceTask.taskStatus === 'Delete', 
